--- a/index.html
+++ b/index.html
@@ -11,7 +11,47 @@
     <div class="margen">
       <header>
         <h1>Expresiones Regulares en PHP</h1>
+        <div class="hr"></div>
+        <h3>Resaltar palabras de un párrafo</h3>
       </header>
+      <section>
+        <form action="resaltar.php" method="post">
+          <div class="form-group">
+            <label for="parrafo">Escribe un párrafo</label>
+            <br />
+            <textarea
+              name="parrafo"
+              class="input"
+              id="parrafo"
+              cols="100"
+              rows="15"
+            >
+Funciones de expresiones regulares
+
+- preg_filter : realiza una búsqueda de expresión regular y reemplaza
+- preg_grep - Devuelve entradas de matriz que coinciden con el patrón
+- preg_last_error_msg - Devuelve el mensaje de error de la última ejecución de expresiones regulares de PCRE
+- preg_last_error : devuelve el código de error de la última ejecución de expresiones regulares de PCRE
+- preg_match_all : realiza una coincidencia de expresión regular global
+- preg_match : realiza una coincidencia de expresión regular
+- preg_quote - Citar caracteres de expresión regular
+- preg_replace_callback_array : realiza una búsqueda de expresiones regulares y reemplaza usando devoluciones de llamada
+- preg_replace_callback : realiza una búsqueda de expresión regular y reemplaza usando una devolución de llamada
+- preg_replace : realiza una búsqueda de expresión regular y reemplaza
+- preg_split - Dividir cadena por una expresión regular
+            </textarea>
+          </div>
+          <div class="form-group">
+            <div class="flex-group">
+              <label for="txt-buscar">Cadena a buscar</label>
+              <input type="text" class="input txt-input" />
+            </div>
+          </div>
+          <div class="form-group form-buttons">
+            <input type="submit" class="button" value="Resaltar" />
+          </div>
+        </form>
+      </section>
     </div>
   </body>
 </html>
