Comienzo de ejercicio de patrones en PHP

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Funciones de expresiones regulares
           <div class="form-group">
             <div class="flex-group">
               <label for="txt-buscar">Cadena a buscar</label>
-              <input type="text" class="input txt-input" />
+              <input type="text" name="txt-buscar" class="input txt-input" />
             </div>
           </div>
           <div class="form-group form-buttons">
