Finalización de ejemplo de Expresiones Regulares

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ Funciones de expresiones regulares
 - preg_replace_callback_array : realiza una búsqueda de expresiones regulares y reemplaza usando devoluciones de llamada
 - preg_replace_callback : realiza una búsqueda de expresión regular y reemplaza usando una devolución de llamada
 - preg_replace : realiza una búsqueda de expresión regular y reemplaza
-- preg_split - Dividir cadena por una expresión regular
-            </textarea>
+- preg_split - Dividir cadena por una expresión regular</textarea
+            >
           </div>
           <div class="form-group">
             <div class="flex-group">
@@ -48,7 +48,12 @@ Funciones de expresiones regulares
             </div>
           </div>
           <div class="form-group form-buttons">
-            <input type="submit" class="button" value="Resaltar" />
+            <input
+              type="submit"
+              name="enviar"
+              class="button"
+              value="Resaltar"
+            />
           </div>
         </form>
       </section>
